# feed

./: .gitignore  AGENTS.md  Dockerfile.worker  README.md  ingester.py  next.config.ts  package-lock.json  package.json  pyproject.toml  railway.json  reader.py
.claude/: settings.local.json
apps/jetstream-indexer/: .dockerignore  Dockerfile  deploy.sh  package-lock.json  package.json
apps/jetstream-indexer/monitoring/: README.md  alert-ingestion-stall.json
apps/jetstream-indexer/scripts/: seed-labelers.ts
apps/jetstream-indexer/sql/: 0005_hnsw_db_settings.sql  0007_posts_vacuum_tuning.sql  0008_labelers.sql
apps/jetstream-indexer/src/: config.ts  worker.ts
apps/mobile/: app.json  metro.config.js  package-lock.json  package.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/web/: .dockerignore  Dockerfile  LOCAL_DB.md  deploy.sh  knip.json  package-lock.json  package.json
apps/web/public/: layout-demos.html
apps/web/scripts/: apply-user-seen-filter-migration.ts  check-schema-drift.ts  reclaim-posts-bloat.ts  setup-local-db.ts
apps/web/sql/: 000_base.sql  005_bsky_oauth.sql  007_user_sessions.sql  009_home_feed.sql  010_recsys.sql  011_user_seen_filter.sql  (+2 more)
scripts/: bootstrap-worktree.sh  drop-firehose-tables.ts  firehose.ts  publish-feed.ts  setup-postgres.ts  tail.py
src/app/: layout.tsx
src/bsky_ingester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/components/: Chat.tsx
src/lib/: db.ts  filter.ts  happy-feed.ts  pg.ts  vector-search.ts
systemd/: bsky-ingester.service
tests/: test_enrich.py  test_writer.py
(+156 files in other folders)
