[project]
name = "bsky-ingester"
version = "0.1.0"
description = "Bluesky firehose ingester — stores raw posts as compressed JSONL"
requires-python = ">=3.11"
dependencies = [
    "websockets>=14.2,<15",
    "zstandard>=0.23,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[project.scripts]
bsky-ingest = "ingester:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
